 9. If we loose MPD connection, then show error widget.
10. Reset status when connection lost.
11. Dont attempt to send commands if not connected.
12. In Qt-builds, if we failt to update files (tag editor, replaygain) then
    show the list of failures in the 'detailed text' section.
13. In Qt (Linux) build, also register org.kde.cantata service - so that
    messages from dynamic helper can be recieved.
14. Update verison of KMessageWidget
15. Update Polish translation.
16. Use 'avcodec' if 'ffmpeg' is not found.
17. Show current song details in tooltip of notification icon for Qt builds as
    per KDE builds.
18. If 'showPage' is called (via DBUS interface), ensure interface is expanded.
19. Save MPD filename scheme settings with MPD server settings.
20. Use QWIDGETSIZE_MAX and not INT_MAX to set maximum height of expanded
    interface.
21. More consistent control of prev/next buttons.
22. Allow 'showPage' dbus command to also show playqueue (if this has been
    placed in the sidebar)
23. Fix handling of filename's with quotes.
24. Fix track order when adding newly added album, via folders page, to
    playqueue.
25. Dont split albums based upon year - this messes up compilation albums,
    where each track may have a different year.
26. To be consistent, use the year of the lowest track number to be an album's
    year.
27. Use "users" group and not "audio" when setting the group ID of covers,
    lyrics, and audio files.
28. If we have no song tag details, show filename in playqueue.

0.8.2
-----
1. Fix track order when adding newly added album to playqueue.
2. When dragging one artist, or album, in treeview to play queue, show cover
   image (if possible).
3. Fix crash when toggling playqueue in sidebar at application start-up.

0.8.1
-----
 1. Detect when this is the first time a user has run Cantata. If so, don't
    place the play queue in the sidebar.
 2. Dont attempt to rename a playlist to its current name - otherwise it is
    deleted!